<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
   android:backgroundTint="@color/dark_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/productImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/nutella1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp">

                <TextView
                    android:id="@+id/productNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/brown" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/sugarBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_button"
                        android:max="100"
                        android:textSize="12sp"
                        android:layout_marginRight="8dp"
                        android:text="@string/sugarText"
                        android:progress="30" />
                    <Button
                        android:id="@+id/categoriesBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:background="@drawable/rounded_button"
                        android:max="100"
                        android:text="@string/categoriesText"
                        android:progress="30" />

                </LinearLayout>



            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>
